--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,9 @@ features = [
 [build-dependencies]
 slint-build = "1.14.1"
 
+[dev-dependencies]
+reqwest = {version = "0.12", features = ["blocking"]}
+
 [features]
 skia = ["slint/renderer-skia"]
 
