--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ log = "0.4.28"
 serde = {version = "1.0.228", features = ["derive"]}
 serde_json = "1.0.145"
 anyhow = "1.0.100"
+axum = "0.8.7"
 
 [dependencies.slint]
 version = "1.14.1"
