--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ serde_json = "1.0.145"
 anyhow = "1.0.100"
 axum = "0.8.7"
 derive_more = { version = "2.0.1", features = ["display"] }
+unicode-segmentation = "1.12.0"
+pest = "2.8.4"
+pest_derive = "2.8.4"
 
 [dependencies.slint]
 version = "1.14.1"
