--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,36 +1,33 @@
 [package]
 name = "modern-sender"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
 license = "GPLv3"
 
 [dependencies]
 futures = "0.3.31"
 image = "0.25.8"
-qrcode = {version = "0.14.1", features = ["image"]}
 presage = { git = "https://github.com/whisperfish/presage" }
 presage-store-sqlite = { git = "https://github.com/whisperfish/presage" }
 simplelog = "0.12.2"
 log = "0.4.28"
 serde = {version = "1.0.228", features = ["derive"]}
-serde_json = "1.0.145"
 anyhow = "1.0.100"
 axum = "0.8.7"
 derive_more = { version = "2.0.1", features = ["display"] }
 unicode-segmentation = "1.12.0"
 pest = "2.8.4"
 pest_derive = "2.8.4"
+url = "2.5.7"
+dark-light = "2.0.0"
+ron = "0.12.0"
 
-[dependencies.slint]
-version = "1.14.1"
-default-features = false
+[dependencies.iced]
+version = "0.14"
 features = [
-    "std",
-    "compat-1-2",
-    "accessibility",
-    "backend-default",
-    "renderer-skia",
-    "serde"
+    "tokio",
+    "qr_code",
+    "svg",
 ]
 
 [dependencies.tokio]
@@ -43,14 +40,11 @@ features = [
     "sync"
 ]
 
-[build-dependencies]
-slint-build = "1.14.1"
-
 [dev-dependencies]
 reqwest = {version = "0.12", features = ["blocking"]}
 
-# [features]
-# skia = ["slint/renderer-skia"]
+[features]
+hot = ["iced/hot"]
 
 [patch.crates-io]
 curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
