--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ pest_derive = "2.8.4"
 url = "2.5.7"
 dark-light = "2.0.0"
 ron = "0.12.0"
+serde_json = "1.0.145"
 
 [dependencies.iced]
 version = "0.14"
