--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ log = "0.4.28"
 serde = {version = "1.0.228", features = ["derive"]}
 anyhow = "1.0.100"
 axum = "0.8.7"
-derive_more = { version = "2.0.1", features = ["display"] }
+derive_more = { version = "2.1.1", features = ["display", "from"] }
 unicode-segmentation = "1.12.0"
 pest = "2.8.4"
 pest_derive = "2.8.4"
@@ -22,6 +22,12 @@ url = "2.5.7"
 dark-light = "2.0.0"
 ron = "0.12.0"
 serde_json = "1.0.145"
+whatsapp-rust = {git = "https://github.com/jlucaso1/whatsapp-rust.git", default-features = false}
+whatsapp-rust-sqlite-storage = { path = "sqlite-storage" }
+whatsapp-rust-tokio-transport = {git = "https://github.com/jlucaso1/whatsapp-rust.git"}
+whatsapp-rust-ureq-http-client = {git = "https://github.com/jlucaso1/whatsapp-rust.git"}
+waproto = {git = "https://github.com/jlucaso1/whatsapp-rust.git"}
+wacore-binary = {git = "https://github.com/jlucaso1/whatsapp-rust.git"}
 
 [dependencies.iced]
 version = "0.14"
