--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "modern-sender"
 version = "0.3.0"
 edition = "2024"
 license = "GPLv3"
+exclude = ["sqlite-storage"]
 
 [dependencies]
 futures = "0.3.31"
@@ -55,3 +56,7 @@ hot = ["iced/hot"]
 
 [patch.crates-io]
 curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
+
+[lints.clippy]
+result-large-err = "allow"
+enum-variant-names = "allow"
