--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ url = "2.5.7"
 ron = "0.12.0"
 serde_json = "1.0.145"
 whatsapp-rust = {git = "https://github.com/jlucaso1/whatsapp-rust.git", default-features = false}
-whatsapp-rust-sqlite-storage = { path = "sqlite-storage" }
+whatsapp-rust-sqlite-storage = { git = "https://github.com/jlucaso1/whatsapp-rust.git" }
 whatsapp-rust-tokio-transport = {git = "https://github.com/jlucaso1/whatsapp-rust.git"}
 whatsapp-rust-ureq-http-client = {git = "https://github.com/jlucaso1/whatsapp-rust.git"}
 waproto = {git = "https://github.com/jlucaso1/whatsapp-rust.git"}
