--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ whatsapp-rust-ureq-http-client = {git = "https://github.com/jlucaso1/whatsapp-ru
 waproto = {git = "https://github.com/jlucaso1/whatsapp-rust.git"}
 wacore-binary = {git = "https://github.com/jlucaso1/whatsapp-rust.git"}
 rfd = "0.17.1"
+tracing-subscriber = "0.3.22"
+tracing = "0.1.44"
 
 [dependencies.iced]
 version = "0.14"
